Fixed Minor Name Mistake
Header Name Changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="navbar">
         <nav>
-            <div class="logo">WeatherWise</div>
+            <div class="logo">Weather Forecast App</div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
